Fix inputbox placement on Firefox

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 html, body, header h1, #switcher ul { margin: 0; padding: 0; }
+body { overflow: hidden; }
 * { font-family: 'Ubuntu Sans', sans-serif; }
 
 header { margin: 5px; }
@@ -69,16 +70,25 @@ section.active { display: block; }
   right: 0;
   height: 30px;
 }
-#input [type=text] {
+#input .wrap {
   position: absolute;
   bottom: 0;
   left: 0;
   right: 70px;
   top: 0;
+}
+#input [type=text] {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  top: 0;
   margin: 0;
-  padding: 2px;
+  padding: 4px 7px;
   border: 1px solid #999;
   border-width: 1px 1px 0 0;
+  box-sizing: border-box;
+  z-index: 100;
 }
 #input [type=submit] {
   position: absolute;
@@ -89,5 +99,6 @@ section.active { display: block; }
   margin: 0;
   border: 1px solid #999;
   border-width: 1px 0 0 0;
+  z-index: 100;
 }
 
